Don't crash when reopening a document

This fixes bug 284047 - Calligra Stage crashes on reopening a odp after closing

BUG: 284047